src/snapshots/tuisage__ui__tests__snapshot_count_flag_incremented.snap
---
source: src/ui.rs
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────┐
│ $ mycli -vvv                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Flags ───────────────────────────────────────────────────────────────────────┐
│▶ [3] -v, --verbose                                         Increase verbosity│
│  ○ -q, --quiet                                                     Quiet mode│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Arguments ───────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ⏎/Space toggle  ⌫ clear  ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q qui
