src/snapshots/tuisage__ui__tests__snapshot_preview_focused.snap
---
source: src/ui.rs
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ ▶ mycli run --jobs 4 lint                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│  init        Initialize a new project││  [·] -e, --env = <dev|staging|prod> Environment to run in│
│  config          Manage configuration││  [•] -j, --jobs = 4 (default)     Number of parallel jobs│
│  │ set (add)       Set a config value││  ○ --dry-run     Show what would be run without executing│
│  │ get             Get a config value││  ○ -w, --watch               Watch for changes and re-run│
│  │ list (ls)   List all config values││  ○ --color / --no-color               Enable color output│
│  │ remove (rm)  Remove a config value││  [0] -v, --verbose [G]             Enable verbose logging│
│▶ run                       Run a task││  ○ -q, --quiet [G]                      Enable quiet mode│
│  deploy        Deploy the application││                                                          │
│  plugin                Manage plugins││                                                          │
│  │ install (i)       Install a plugin││                                                          │
│  │ uninstall (rm)  Uninstall a plugin│└──────────────────────────────────────────────────────────┘
│  │ list (ls)   List installed plugins│┌ Arguments ───────────────────────────────────────────────┐
│  │ update              Update plugins││  ● <task> = lint                         Task name to run│
│  version        Print the CLI version││  ○ [args] = (empty)          Additional arguments to pass│
│  help          Print help information││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ⏎ run  ⇥ next  ^u reset  q quit                                                       T: [Dracula]
